--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,9 +3,17 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
-stages:
-- stage: ProdDeploy
-  jobs:
-    - job: ProductionsJob
-      steps:
-      - bash: echo $(environment)
+jobs:
+- job: job1
+  steps:
+  - script: echo Job1 - Hello, world! Changed
+    displayName: 'Run a one-line script'
+
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line scripts'
+- job: job2
+  steps:
+  - script: echo Job2
+    displayName: 'Run a one-line script'
